[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cavinato-utilidades"
version = "0.1.0"
description = "Minha biblioteca de funções utilitárias compartilhadas"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Filipe Cavinato" }
]
dependencies = [
    "rich",  # Se suas funções de utilidades dependerem do Rich, o pip instala automático!
]

[tool.setuptools.packages.find]
where = ["."]
